[package]
authors = ["sunli <scott_s829@163.com>", "Koxiaet"]
categories = ["network-programming", "asynchronous"]
description = "GraphQL query parser for asynk-grafql"
documentation = "https://docs.rs/asynk-grafql/"
edition = "2024"
homepage = "https://github.com/aumetra/asynk-grafql"
keywords = ["futures", "async", "graphql"]
license = "MIT OR Apache-2.0"
name = "asynk-grafql-parser"
repository = "https://github.com/aumetra/asynk-grafql"
version = "8.0.0-rc.4"

[dependencies]
asynk-grafql-value.workspace = true
pest = "2.7.11"
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
pest_generator = "2.7.8"
proc-macro2 = "1.0.79"
