[package]
name = "asynk-grafql-value"
version = "8.0.0-rc.4"
authors = ["sunli <scott_s829@163.com>", "Koxiaet"]
edition = "2024"
description = "GraphQL value for asynk-grafql"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/asynk-grafql/"
homepage = "https://github.com/aumetra/asynk-grafql"
repository = "https://github.com/aumetra/asynk-grafql"
keywords = ["futures", "async", "graphql"]
categories = ["network-programming", "asynchronous"]

[dependencies]
serde_json.workspace = true
serde.workspace = true
bytes.workspace = true
indexmap.workspace = true

[features]
raw_value = ["serde_json/raw_value"]
